[package]
name = "tide_ws_test"
version = "0.1.0"
license = "MIT"
authors = ["ryan <yarnnd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.0"
log = "0.4.11"
futures = "^0.3.5"
async-std = { version = "1.6.2", features = ["unstable"] }
tide = "0.12.0"
http-types = "^2.4.0"
chrono = { version = "0.4.13" }
anyhow = "1.0.32"

[patch.crates-io]
http-types = { git = "https://github.com/Yarn/http-types.git", rev = "4ba7c547d37f7e172e69a6bd619336e067f70103" }
async-h1 = { git = "https://github.com/Yarn/async-h1.git", rev = "5bca9bea599e3f500e608fcfea32399985c83f31" }
tide = { git = "https://github.com/Yarn/tide.git", rev = "7fc4a5e85c0e71d136faa114c1aa749d701534fd" }

# [replace]
# # "async-h1:2.1.1" = { path = "../async-h1" }
# # "http-types:2.3.0" = { path = "../http-types" }
# # "tide:0.12.0" = { path = "../tide" }
# # "websocket_handshake:0.1.0" = { path = "../websocket_handshake" }
# "async-h1:2.1.2" = { git = "https://github.com/Yarn/async-h1.git", rev = "5bca9bea599e3f500e608fcfea32399985c83f31" }
# "http-types:2.4.0" = { git = "https://github.com/Yarn/http-types.git", rev = "4ba7c547d37f7e172e69a6bd619336e067f70103" }
# "tide:0.12.0" = { git = "https://github.com/Yarn/tide.git", rev = "7fc4a5e85c0e71d136faa114c1aa749d701534fd" }
